# Tracil

./: .cursorrules  .env.example  .gitignore  AI_DEV_GUIDE.md  DESIGN.md  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.ts  test.txt  tsconfig.json
app/: page.tsx
app/_components/: WebVitals.tsx
backend/: .env.example  .gitignore  AI_DEV_GUIDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/output/: acrf_blankcrf_var_index.csv  lineage_ADAE_AEBODYSYS.json  protocol_protocol.txt
backend/output/session_20250821_175310/: session_summary.json
backend/pgm/: README_pgm.txt  acrf_preprocess.py  llm_lineage_define.py
backend/services/: __init__.py  acrf_preprocess.py  llm_lineage_define.py  protocol_preprocess.py  tlf_index.py  tlf_lineage_from_ars.py  tlf_preprocess.py  usdm_extract.py
components/search/: SearchBar.tsx
components/ui/: ErrorBoundary.tsx
docs/: 2025_IMPLEMENTATION_SUMMARY.md  2025_IMPROVEMENTS.md  CLEANUP_AND_DELETION_RECOMMENDATIONS.md  MAIN_SCREEN_UI.md  SOURCE_AGNOSTIC_DATA_STRUCTURE.md  VARIABLES_BROWSER_UI.md  grouped-file-upload-design.md  lineage-flow-chart-design.md
features/datasets/: MainScreen.tsx  mocks.ts
frontend/: .env.example  .npmrc  API_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROTOCOL_DESIGN_FEATURE.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/docs/: FULLSCREEN_MODAL.md  (+5 more)
hooks/: useSidebarKeyboardNav.ts
types/: files.ts  jest-axe.d.ts
(+57 files in other folders)
